gl31-master/src/test/deca/context/valid/complet/instanceof.deca
// Description:
//    Test valide pour complet context
//
// Resultats:
//    Succes
//
// Historique:
//    cree le 24/01/2021
class A{}
{
    A a = new A();
    if(a instanceof A){
        print("ok");
    }
}